# DevPath-Navigator

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  ARCHITECTURE.ja.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.ja.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
agent/: agent.py  rate_limit.py  server.py  state.py  taxonomy.py
agent/tools/: __init__.py  _common.py  explain_cluster.py  find_similar_trajectories.py  locate_user.py  nlq_over_corpus.py  normalize_profile.py  recommend_next_steps.py  skill_gap_analysis.py
data-gen/: generate.py  load_to_bq.py  taxonomy.yaml
docs/: architecture.drawio  architecture.ja.drawio
embedding/: plot.py  tokens.py  train_w2v.py  trajectory.py  umap_cluster.py
eval/: gate.py  metrics.py  run.py  store.py
frontend/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  (+2 more)
infra/: README.ja.md  README.md  bigquery.tf  cloudrun.tf  iam.tf  outputs.tf  services.tf  terraform.tfvars.example  variables.tf  versions.tf
pipelines/: cloudbuild.retrain.yaml  grant-cloudbuild-roles.sh  inject-drift.sh  retrain.sh
scripts/: generate-hero-image.py
scripts/demo/: README.md  package-lock.json  package.json  playwright.config.ts  render.py
tests/: test_gate.py  test_generate.py  test_nlq_validator.py  test_rate_limit.py  test_server.py  test_taxonomy_normalize.py  test_tokens.py
(+21 files in other folders)
